removed margin-top for card-coin class to make the boxes fall on top of each other correctly on smaller breakpoints

--- a/src/assets/scss/blk-design-system/custom/_card.scss
+++ b/src/assets/scss/blk-design-system/custom/_card.scss
@@ -146,9 +146,9 @@
 }
 
 @include media-breakpoint-down(xs) {
-  .card.card-coin {
-    margin-top: 80px;
-  }
+  // .card.card-coin {
+  //   margin-top: 80px;
+  // }
 }
 
 .text-on-back {
